styles/instructions.module.scss
@import "./variables.scss";

.instructions {
  display: flex;
  height: 100%;
  flex-direction: column;
  padding: 0 1rem;
  align-items: center;
  gap: 3rem;

  .wrapper {
    flex-grow: 1;
    gap: 3rem;
    margin: 2rem;
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    text-align: center;
    max-width: $content-max-width;

    .mainHeader {
      h1,
      h2 {
        font-style: italic;
        text-transform: uppercase;
      }

      h2 {
        margin-top: 0;
      }
    }
  }

  .about {
    flex-grow: 0;
    text-align: center;
    margin-bottom: 1rem;
    color: $text-muted;

    p:first-child {
      margin-top: 0;
    }

    .heartImg {
      vertical-align: bottom;
      width: 18px;
    }

    > div {
      margin-bottom: 10px;
    }

    a {
      margin-bottom: 10px;
      color: $text-muted;

      &:hover {
        color: $text-light;
      }
    }

    .ico2logo {
      width: 120px;
    }
  }
}

